Backend works and extracts information and answers

--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,25 +140,54 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Batches: 100%|██████████| 1/1 [00:00<00:00,  1.85it/s]\n"
+      "/Users/syedalimuradtahir/Documents/Personal Projects/Portfolio_new/backend/Modules/Services/retriever.py:35: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embedding_model = HuggingFaceEmbeddings(model_name=embed_model, show_progress=True)\n",
+      "/Users/syedalimuradtahir/Documents/Personal Projects/Portfolio_new/portfolio_env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/Users/syedalimuradtahir/Documents/Personal Projects/Portfolio_new/backend/Modules/Services/retriever.py:39: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "  vector_db = Chroma(\n",
+      "Batches: 100%|██████████| 1/1 [00:00<00:00,  3.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company: Tesla, Role: Data Engineer\n",
+      "Created engineering dashboards used by 100+ stakeholders across the USA, Germany, and Canada.\n",
+      "Company: Technische Universität Berlin, Role: Data Scientist\n",
+      "Developed and deployed a chatbot system for Berlin’s public administration, utilizing open-source LLMs like ChatGPT 3.5, LLAMA, Alpaca, Vicuna 13b, Dolly 2.0, and Raven.\n",
+      "Optimized the backend of a Grafana plugin using Golang and improved the frontend using TypeScript and React.\n",
+      "Utilized open-source large language models (LLMs) such as LLAMA 2.0 and Mixtral to extract and analyze contract information from legal documents, automating workflows.\n",
+      "Implemented data visualizations to track machine states, allowing management to address downtime root causes and improve productivity.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "query = \"What did the user did at Tesla?\"\n",
+    "query = \"What softwares did he used at Tesla. Did he use Python, SQL, Grafana, and Docker?\"\n",
     "retrieved_docs = retrieve_text('backend/Modules/vector_store/chromadb', query)\n",
-    "retrieved_text = \"\\n\".join([doc.page_content for doc in retrieved_docs])"
+    "retrieved_text = \"\\n\".join([doc.page_content for doc in retrieved_docs])\n",
+    "print(retrieved_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/syedalimuradtahir/Documents/Personal Projects/Portfolio_new/backend/Modules/Services/llm_inference.py:35: LangChainDeprecationWarning: The class `HuggingFaceEndpoint` was deprecated in LangChain 0.0.37 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEndpoint``.\n",
+      "  return HuggingFaceEndpoint(\n",
       "/Users/syedalimuradtahir/Documents/Personal Projects/Portfolio_new/portfolio_env/lib/python3.13/site-packages/huggingface_hub/utils/_deprecation.py:131: FutureWarning: 'post' (from 'huggingface_hub.inference._client') is deprecated and will be removed from version '0.31.0'. Making direct POST requests to the inference server is not supported anymore. Please use task methods instead (e.g. `InferenceClient.chat_completion`). If your use case is not supported, please open an issue in https://github.com/huggingface/huggingface_hub.\n",
       "  warnings.warn(warning_message, FutureWarning)\n"
      ]
@@ -167,7 +196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tesla's user interface is a touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 17-inch touchscreen display, with a resolution of 1080x10000+ stakeholders across the USA, Germany, and Canada. The user interface is a 15-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 17-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 15-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 17-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 15-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 17-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 15-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 17-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 15-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 17-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 15-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 17-inch touchscreen display that is used to control various functions of the car, such as air conditioning, navigation, and infotainment. The user interface is a 17-inch\n"
+      "- Programming Languages: None mentioned for Tesla\n",
+      "             - Software Names: None mentioned for Tesla\n"
      ]
     }
    ],
