--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -150,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/syedalimuradtahir/Documents/Personal Projects/Portfolio_new/backend/Modules/Services/retriever.py:41: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "/Users/syedalimuradtahir/Documents/Personal Projects/Portfolio_new/backend/Modules/Services/retriever.py:39: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
       "  vector_db = Chroma(\n"
      ]
     },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,9 +187,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Designed reports using SAP Business Objects (BO) and Google Data Studio\n",
-      "             - Implemented ETL pipelines in BigQuery using SQL\n",
-      "             - Built dynamic dashboards in Looker\n"
+      "- Designed reports using SAP Business Objects (BO) and Google Data Studio.\n",
+      "             - Implemented ETL pipelines in BigQuery using SQL.\n",
+      "             - Built dynamic dashboards in Looker.\n"
      ]
     }
    ],
