Created vector database again. Tested frontend docker file and current working on backend and docker-compose file

--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,17 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/syedalimuradtahir/Documents/Personal Projects/Portfolio_new/backend/Modules/Services/retriever.py:39: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
-      "  vector_db = Chroma(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -164,7 +156,7 @@
     }
    ],
    "source": [
-    "query = \"What tasks did he do at Europcar Mobility Group?\"\n",
+    "query = \"What tasks did Burny do at Europcar Mobility Group?\"\n",
     "retrieved_docs = retrieve_text('backend/Modules/vector_store/chromadb', query)\n",
     "retrieved_text = \"\\n\".join([doc.page_content for doc in retrieved_docs])\n",
     "print(retrieved_text)"
@@ -172,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -187,9 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Designed reports using SAP Business Objects (BO) and Google Data Studio.\n",
-      "             - Implemented ETL pipelines in BigQuery using SQL.\n",
-      "             - Built dynamic dashboards in Looker.\n"
+      "At Europcar Mobility Group, Burny designed reports using SAP Business Objects (BO) and Google Data Studio to provide actionable insights that supported strategic decision-making. Burny also implemented ETL pipelines in BigQuery using SQL to extract and integrate data from SAP BO and Oracle, ensuring high data accuracy and consistency. Additionally, Burny built dynamic dashboards in Looker to empower stakeholders across departments to track key metrics.\n"
      ]
     }
    ],
